тз:4. итерация:3. Исправлены замечания